--- a/app/src/main/res/layout/activity_bodyjudgment.xml
+++ b/app/src/main/res/layout/activity_bodyjudgment.xml
@@ -8,7 +8,8 @@
 
     <include
         android:id="@+id/bodyTitle"
-        layout="@layout/activity_title_bar"
+        layout="@layout/activity_title_bar" />
+
     <RelativeLayout
         android:id="@+id/rl_selectBody"
         android:layout_width="match_parent"
