--- a/app/src/main/res/layout/activity_choose_action.xml
+++ b/app/src/main/res/layout/activity_choose_action.xml
@@ -20,7 +20,7 @@
         app:WhorlView_MiddleWhorlColor="@color/material_blue"
         app:WhorlView_Parallax="fast"
         app:WhorlView_SmallWhorlColor="@color/material_red"
-        app:WhorlView_StrokeWidth="8"
+        app:WhorlView_StrokeWidth="6"
         app:WhorlView_SweepAngle="180" />
 
     <LinearLayout
@@ -40,13 +40,13 @@
             android:layout_weight="1"
             android:gravity="right"
             android:text="@string/choose_part"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/choose_part_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_width="14dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="9dp"
             android:src="@mipmap/icon_choose" />
 
         <TextView
@@ -58,13 +58,13 @@
             android:layout_weight="1"
             android:gravity="right"
             android:text="@string/choose_equipment"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/choose_equipment_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_width="14dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="9dp"
             android:src="@mipmap/icon_choose" />
 
         <TextView
@@ -76,13 +76,13 @@
             android:layout_weight="1"
             android:gravity="right"
             android:text="@string/choose_type"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/choose_type_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_width="14dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="9dp"
             android:src="@mipmap/icon_choose" />
 
         <TextView
@@ -94,14 +94,14 @@
             android:layout_weight="1"
             android:gravity="right"
             android:text="@string/choose_level"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <ImageView
             android:id="@+id/choose_level_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="14dp"
+            android:layout_height="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="9dp"
             android:src="@mipmap/icon_choose" />
     </LinearLayout>
 
