--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/news_back"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:src="@mipmap/back" />
@@ -27,22 +27,27 @@
             android:text="@string/newsTitle"
             android:textColor="@color/white"
             android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/news_add"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:src="@mipmap/icon_add_newschannel" />
     </RelativeLayout>
 
-    <FrameLayout
+
+    <com.sibo.fastsport.view.indicator.TitlePageIndicator
+        android:id="@+id/pvr_user_indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="0dp">
+        android:layout_gravity="bottom"
+        android:textColor="@color/gray_hint_dark"
+        android:textSize="17sp"
+        app:selectedColor="@color/dip_red" />
 
-        <com.sibo.fastsport.view.indicator.TitlePageIndicator
-            android:id="@+id/pvr_user_indicator"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:textColor="@color/gray_hint_dark"
-            android:textSize="17sp"
-            app:selectedColor="@color/dip_red" />
-    </FrameLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pvr_user_pager"
