--- a/app/src/main/res/layout/dialog_view.xml
+++ b/app/src/main/res/layout/dialog_view.xml
@@ -10,7 +10,8 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <com.sibo.fastsport.view.WhorlView xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.sibo.fastsport.view.WhorlView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
